--- a/ArXivRedirector Extension/Resources/manifest.json
+++ b/ArXivRedirector Extension/Resources/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "default_locale": "en",
 
-    "name": "ArXiv Redirector",
+    "name": "Page Redirector",
     "description": "Redirect arXiv pages to alternative domains",
     "version": "1.0",
 
