--- a/ArXivRedirector Extension/Resources/manifest.json
+++ b/ArXivRedirector Extension/Resources/manifest.json
@@ -13,12 +13,17 @@
         "512": "images/icon-512.png"
     },
 
+    "background": {
+        "service_worker": "background.js"
+    },
+
     "content_scripts": [{
         "js": [ "utils.js", "content.js" ],
         "matches": [
             "*://arxiv.org/*",
             "*://github.com/*",
-            "*://www.scholar-inbox.com/*"
+            "*://www.scholar-inbox.com/*",
+            "*://*/*"
         ]
     }],
 
@@ -27,6 +32,6 @@
         "default_icon": "images/toolbar-icon.svg"
     },
 
-    "permissions": ["tabs", "scripting"]
+    "permissions": ["tabs", "scripting", "contextMenus"]
 
 }
